--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,6 +28,14 @@ header img {
 
 #section-vendidos .card {
     margin: 5px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 10px;    
+}
+
+#section-vendidos .card-gr {
+    margin: 5px;
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 10px;    
 }
